Fix alignment of cart item variation meta data.

--- a/css/checkout-steps-rtl-406-beta-8.css
+++ b/css/checkout-steps-rtl-406-beta-8.css
@@ -2176,6 +2176,7 @@ div.woocommerce .fc-wrapper #order_review table.woocommerce-checkout-review-orde
 }
 
 div.woocommerce .fc-wrapper #order_review table.woocommerce-checkout-review-order-table dl.variation {
+  display: block !important;
   margin: 0 !important;
   padding: 0 !important;
   color: var(--fluidcheckout--color--grey, #7b7575);
